fix notification swagger generation
